<resources>
    <string name="app_name">PaymentWithCreditCardSample</string>
    <string name="pay_button">Pagar</string>
    <string name="history_button">Ver histórico</string>
    <string name="history_label">Histórico</string>
    <string name="result_label">Resultado</string>
    <string name="pay_label">Pagar</string>
    <string name="name_hint">Nome</string>
    <string name="card_number_hint">Número do cartão</string>
    <string name="card_brand_hint">Bandeira</string>
    <string name="month_hint">MM</string>
    <string name="year_hint">AAAA</string>
    <string name="amount_hint">Digite o valor aqui</string>
    <string name="cvv_hint">CVV</string>
    <string name="empty_field">Esse campo deve ser preenchido corretamente</string>
    <string name="success_payment">Seu pagamento foi realizado com sucesso</string>
    <string name="generic_error_payment">Ocorreu um erro com o seu pagamento, por favor tente novamente</string>
    <string name="without_connection_payment">Você esta sem conexão com a internet</string>
    <string name="transaction_list_empty">Você não tem nenhuma transação feita</string>
    <string name="wait_transaction">Aguarde, estamos processando seu pagamento</string>
</resources>
